<resources>
    <string name="app_name">MovieJournal2</string>
    <string name="label">Username</string>
    <string name="passwordlabel">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="MovieJournal">MovieJournal</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="you_are_logged_in_successfully">You are logged in successfully</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>
    <string name="search_for_a_movie">Search for a movie</string>
    <string name="search">Search</string>
    <string name="movie_title" />
    <string name="recommended_movies">Recommended movies :</string>
    <string name="Your_watchlist">Your watchlist</string>
    <string name="channel_name">\"notif_channel\"</string>
    <string name="channel_description">\"Channel for notifications\"</string>
</resources>