<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sign_up">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/splash"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:startIconDrawable="@drawable/ic_baseline_email_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_username"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:startIconDrawable="@drawable/ic_baseline_account_box_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordlabel" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>
        <Button
            android:id="@+id/login_button"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
